# followflow

./: .env.example  .gitignore  Dockerfile  README.md  USAGE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/instagram/: __init__.py  auth.py  browser.py  discovery.py  follow.py  unfollow.py
app/scheduler/: __init__.py  jobs.py
app/telegram/: __init__.py  bot.py  handlers.py
app/utils/: logger.py  rate_limiter.py
tests/: conftest.py  test_browser.py  test_config.py  test_discovery.py  test_follow.py  test_main.py  test_models.py  test_scheduler.py  test_telegram.py  test_unfollow.py  test_utils.py
